--- a/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ProyectoFinal_MVC</title>
+    <title>@ViewData["Title"] Empresas Constructora</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ProyectoFinal_MVC.styles.css" asp-append-version="true" />
@@ -24,6 +24,15 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EmpresaConstructora" asp-action="Index">Empresa Constructora</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trabajador" asp-action="Index">Registro de Trabajador</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Construccion" asp-action="Index">Registro de Construccion</a>
                         </li>
                     </ul>
                 </div>
