commit Diseño vistas

--- a/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Construccion/Index.cshtml
+++ b/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Construccion/Index.cshtml
@@ -39,7 +39,14 @@ else
 {
     <div class="card">
         <div class="card-body">
-            No hay datos Registrados de las Construcciones.
+          <p1>No hay datos Registrados de las Construcciones.</p1>
         </div>
+
+    </div>
+    <div class="card">
+        <div class="card-body">
+         <Center><p2>Desea agregar una Nueva Construccion</p2><br><br>
+          <a asp-action="Crear" class="btn btn-success">Crear Construcciones</a></Center>
+       </div>
     </div>
 }
