--- a/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/EmpresaConstructora/Index.cshtml
+++ b/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/EmpresaConstructora/Index.cshtml
@@ -33,7 +33,15 @@ else
 {
     <div class="card">
         <div class="card-body">
-            No hay datos Registrados En la Empresa constructora.
+            <p1>No hay datos Registrados En la Empresa constructora. </p1>
+           
         </div>
+
+    </div>
+    <div class="card">
+        <div class="card-body">
+         <Center><p2>Desea agregar una nueva Empresa constructora</p2><br><br>
+          <a asp-action="Crear" class="btn btn-success">Crear EmpresaConstructora</a></Center>
+       </div>
     </div>
 }
