--- a/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Trabajador/Index.cshtml
+++ b/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Trabajador/Index.cshtml
@@ -39,7 +39,15 @@ else
 {
     <div class="card">
         <div class="card-body">
-            No hay datos Registrados de los Trabajadores.
+            <p1>No hay datos Registrados de los Trabajadores.</p1>
+           
         </div>
+
+    </div>
+    <div class="card">
+        <div class="card-body">
+         <Center><p2>Desea agregar un Nuevo Trabajadores</p2><br><br>
+          <a asp-action="Crear" class="btn btn-success">Crear Trabajadores</a></Center>
+       </div>
     </div>
 }
