--- a/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar navbar-dark bg-primary bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ProyectoFinal_MVC</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Empresa Constructora</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,19 +20,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link btn btn-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link btn btn-dark" asp-area="" asp-controller="EmpresaConstructora" asp-action="Index">Empresa Constructora</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="EmpresaConstructora" asp-action="Index">Empresa Constructora</a>
+                            <a class="nav-link btn btn-dark" asp-area="" asp-controller="Trabajador" asp-action="Index">Registro de Trabajador</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trabajador" asp-action="Index">Registro de Trabajador</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Construccion" asp-action="Index">Registro de Construccion</a>
+                            <a class="nav-link btn btn btn-dark" asp-area="" asp-controller="Construccion" asp-action="Index">Registro de Construccion</a>
                         </li>
                     </ul>
                 </div>
