--- a/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Trabajador/Index.cshtml
+++ b/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Trabajador/Index.cshtml
@@ -1,53 +1,72 @@
 ﻿@using ProyectoFinal_MVC.Models;
 @model List<Trabajador>
-
 @{
     ViewData["title"] = "Registros de Trabajadores";
 }
+<div class="col-sm-6">
+    <a class="btn btn-primary" asp-area="" asp-controller="Trabajador" asp-action="Crear">Crear Trabajador</a>
+</div>
 
-@if (Model.Count != 0)
+@if (Model.Count !=0)
 {
-    <table class="table table-dark">
+    <table class="table table-dark table-striped">
         <thead>
             <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Documendo Identidad</th>
-                <th scope="col">Profesion</th>
-                <th scope="col">Tipo De Trabajador</th>
-                <th scope="col">Fecha De Nacimiento</th>
-                <th scope="col">ID EmpresaConstructora</th>
+              <th scope="col">Name</th>
+              <th scope="col">DocumentoIdentidad</th>
+              <th scope="col">Profesion</th>
+              <th scope="col">TipoDeTrabajador</th>
+              <th scope="col">FechaDeNacimiento</th>
+              <th scope="col">EmpresaConstructoraId</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var e in Model)
+            @foreach(var item in Model)
             {
                 <tr>
-                    <td>@e.Id</td>
-                    <td>@e.Name</td>
-                    <td>@e.DocumentoIdentidad</td>
-                    <td>@e.Profesion</td>
-                    <td>@e.TipoDeTrabajador</td>
-                    <td>@e.FechaDeNacimiento</td>
-                    <td>@e.EmpresaConstructoraId</td>
+                    <td>@item.Name</td>
+                    <td>@item.DocumentoIdentidad</td>
+                    <td>@item.Profesion</td>
+                    <td>@item.TipoDeTrabajador</td>
+                    <td>@item.FechaDeNacimiento</td>
+                    <td>@item.EmpresaConstructora</td>
+                    <td>
+
+                        <a asp-route-id="@item.Id" asp-action="Update"
+                        class="btn btn-success btnsm">Editar</a>
+
+                        <input onclick="jsDelete(@item.Id);" type="button" value="Delete" class="btn btn-danger"/>
+                    </td>
                 </tr>
             }
         </tbody>
+        
     </table>
+
 }
 else
 {
     <div class="card">
         <div class="card-body">
-            <p1>No hay datos Registrados de los Trabajadores.</p1>
-           
+            No hay trabajadores Registrados.
         </div>
-
-    </div>
-    <div class="card">
-        <div class="card-body">
-         <Center><p2>Desea agregar un Nuevo Trabajadores</p2><br><br>
-          <a asp-action="Crear" class="btn btn-success">Crear Trabajadores</a></Center>
-       </div>
     </div>
 }
+<script>
+    function jsDelete(id) {
+        if (confirm("Esta seguro de borrar Trabajador?")) {
+            url = "@Url.Content("~/Trabajador/Delete")" + "/" + id;
+
+            $.post(url, function(data) {
+
+                if (data == "1") {
+                    document.location.href="@Url.Content("~/Trabajador/")"
+                } else {
+                    alert("Ocurrio un error")
+                }
+
+            })
+        }
+        
+    }
+</script>
