--- a/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Trabajador/Index.cshtml
+++ b/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Trabajador/Index.cshtml
@@ -3,21 +3,25 @@
 @{
     ViewData["title"] = "Registros de Trabajadores";
 }
-<div class="col-sm-6">
-    <a class="btn btn-primary" asp-area="" asp-controller="Trabajador" asp-action="Crear">Crear Trabajador</a>
-</div>
-
+<center>
+ <div class="col-sm-6">
+  <a class="btn btn-primary" asp-area="" asp-controller="Trabajador" asp-action="Crear">Registrar un Nuevo Trabajador</a>
+  </div>
+</center>
+ <br/>
 @if (Model.Count !=0)
 {
-    <table class="table table-dark table-striped">
+    <table class="table table-dark">
         <thead>
             <tr>
-              <th scope="col">Name</th>
-              <th scope="col">DocumentoIdentidad</th>
+              <th scope="col">Nombre</th>
+              <th scope="col">Documento de Identidad</th>
               <th scope="col">Profesion</th>
-              <th scope="col">TipoDeTrabajador</th>
-              <th scope="col">FechaDeNacimiento</th>
-              <th scope="col">EmpresaConstructoraId</th>
+              <th scope="col">Tipo de Trabajador</th>
+              <th scope="col">Fecha de Nacimiento</th>
+              <th scope="col">ID EmpresaConstructora</th>
+              <th scope="col">Editar</th>
+              <th scope="col">Borrar</th>
             </tr>
         </thead>
         <tbody>
@@ -29,44 +33,37 @@
                     <td>@item.Profesion</td>
                     <td>@item.TipoDeTrabajador</td>
                     <td>@item.FechaDeNacimiento</td>
-                    <td>@item.EmpresaConstructora</td>
-                    <td>
-
-                        <a asp-route-id="@item.Id" asp-action="Update"
+                    <td>@item.EmpresaConstructoraId</td>
+                    <td><a asp-route-id="@item.Id" asp-action="Update"
                         class="btn btn-success btnsm">Editar</a>
-
-                        <input onclick="jsDelete(@item.Id);" type="button" value="Delete" class="btn btn-danger"/>
+                    </td>
+                    <td>
+                         <input onclick="jsDelete('@item.Id');" type="button" value="Borrar" class="btn btn-danger"/>
                     </td>
                 </tr>
             }
-        </tbody>
-        
+        </tbody>       
     </table>
-
-}
-else
-{
-    <div class="card">
+ }
+ else
+ {
+      <div class="card">
         <div class="card-body">
-            No hay trabajadores Registrados.
+            No hay  Datos de trabajadores Registrados.
         </div>
-    </div>
-}
-<script>
+      </div>
+ }
+ <script>
     function jsDelete(id) {
-        if (confirm("Esta seguro de borrar Trabajador?")) {
-            url = "@Url.Content("~/Trabajador/Delete")" + "/" + id;
-
-            $.post(url, function(data) {
-
-                if (data == "1") {
-                    document.location.href="@Url.Content("~/Trabajador/")"
-                } else {
-                    alert("Ocurrio un error")
-                }
-
-            })
-        }
-        
+       if (confirm("Esta seguro de Borrar los Datos de Este Trabajador?")) {
+          url = "@Url.Content("~/Trabajador/Delete")" + "/" + id;
+          $.post(url, function(data) {
+            if (data == "1") {
+              document.location.href="@Url.Content("~/Trabajador/")"
+            } else {
+              alert("Ocurrio un error")
+            }
+          })
+       }    
     }
-</script>
+ </script>
