--- a/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Trabajador/Update.cshtml
+++ b/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Trabajador/Update.cshtml
@@ -32,12 +32,12 @@
         <span asp-validation-for="TipoDeTrabajador" class="text-danger"></span>
       </div>
       <div class="mb-3">
-        <label class="form-label">ID EmpresaConstructora</label>
+        <label class="form-label">ID Empresa Constructora</label>
         <input asp-for="EmpresaConstructoraId" type="text" class="form-control">
         <span asp-validation-for="EmpresaConstructoraId" class="text-danger"></span>
       </div>
       <button type="submit" class="btn btn-primary">Update</button>
-      <a asp-action="Index" asp-controller="Trabajador" class="btn btn-warning">Volver a la lista Contactos</a>
+      <a asp-action="Index" asp-controller="Trabajador" class="btn btn-warning">Volver a la lista Trabajadores</a>
     </form>
 
 
