--- a/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Home/Index.cshtml
+++ b/ProyectoFinal_MVC/ProyectoFinal_MVC/Views/Home/Index.cshtml
@@ -3,6 +3,14 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class= "containerestadisticas">
+   <div class= "headernotasdoc1p"><p3>Empresas Constructoras</p3>
+    </div>
+      <div class= "columna1p">
+       </div>
+      <div class= "columna2p">
+      </div>
+      <div class= "columna3p">
+      </div>
+   </div>
 </div>
